Added mock leaderboard & leaderboard handler
