# docs/swagger.json
@@ -9,6 +9,38 @@
     },
     "host": "api.LoLQueue.com",
     "paths": {
+        "/leaderboard": {
+            "get": {
+                "description": "Get the leaderboards for a specifc discord server ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "accounts"
+                ],
+                "summary": "Get leaderboard data",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Leaderboard"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/lookup/{srv}/{usr}": {
             "get": {
                 "description": "Gets the users account information by their Username and Server",
@@ -186,6 +218,40 @@
                 },
                 "championPoints": {
                     "type": "integer"
+                }
+            }
+        },
+        "models.Leaderboard": {
+            "type": "object",
+            "properties": {
+                "current_objective": {
+                    "type": "string"
+                },
+                "discord_server_id": {
+                    "type": "string"
+                },
+                "leaders": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Leaders"
+                    }
+                },
+                "sec_till_next_obj": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.Leaders": {
+            "type": "object",
+            "properties": {
+                "position": {
+                    "type": "integer"
+                },
+                "score": {
+                    "type": "string"
+                },
+                "summoner_name": {
+                    "type": "string"
                 }
             }
         },
